src/test/deca/context/invalid/created/decl_var/decl_float_eq_bool.deca
// Description :
//    test affectation incorrect float = bool;
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: Types incompatibles pour l’affectation

{
float a = true; //true n'est pas un float
}